--- a/models/curate/_curate__models.yml
+++ b/models/curate/_curate__models.yml
@@ -5,6 +5,7 @@ models:
     config:
       materialized: table
       transient: false
+      schema: curate
     columns:
       - name: customer_id
         tests:
